<resources>
    <string name="app_name">ContactReader</string>
    <string name="fisrsname">FisrsName</string>
    <string name="lastname">LastName</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="details">DETAILS</string>
    <string name="permission_contacts_rationale">Необходим доступ на чтение контактов</string>
    <string name="ok">OK</string>
    <string name="action_search">search</string>
    <string name="action_map">map</string>
    <string name="title_activity_maps">Map</string>
    <string name="setlocation">SetLocation</string>
    <string name="address">Address</string>
    <string name="save">save</string>
    <string name="route">route</string>

</resources>
