<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:padding="16dp">

    <TextView
        android:id="@+id/textName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fisrsname"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textFamily"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textName"
        android:hint="@string/lastname"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textFamily"
        android:hint="@string/phone_number"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textPhone"
        android:hint="@string/email"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textName"
        android:layout_below="@+id/textEmail"
        android:textSize="22sp"
        android:hint="@string/address" />

    <Button
        android:id="@+id/setLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textName"
        android:layout_below="@+id/textAddress"
        android:text="@string/setlocation" />

</RelativeLayout>